refactoring according to comments + add check for flowUnit